fix various layout issues

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -87,6 +87,7 @@ body {
       justify-content: flex-end;
       background: transparent;
       flex: 1;
+      margin: 2px;
     }
 
     img {
@@ -106,10 +107,6 @@ body {
         font-size: smaller;
       }
     }
-
-    a:hover {
-    }
-
   }
 
   .site-title {
